fix: overflow

--- a/css/style.css
+++ b/css/style.css
@@ -539,7 +539,7 @@ template {
   line-height: 32px;
   color: #5a7184;
   overflow: auto;
-  max-height: 161px;
+  height: 161px;
 }
 
 .main__button-buy {
@@ -667,8 +667,6 @@ template {
 .recommend__info-title {
   margin-top: 13px;
   margin-bottom: 16px;
-  overflow: auto;
-  max-height: 64px;
 }
 
 .recommend__info-genre {
@@ -1817,6 +1815,8 @@ template {
   }
   .main-description {
     width: 100%;
+    overflow: initial;
+    height: auto;
   }
   .main-title {
     margin-top: 0;
@@ -2359,6 +2359,10 @@ template {
   }
   .blog__card-image-main {
     width: auto;
+  }
+  .blog__card-title {
+    overflow: auto;
+    max-height: 60px;
   }
   .blog__card-title-main {
     font-size: 16px;
