--- a/sass/blocks/_main.sass
+++ b/sass/blocks/_main.sass
@@ -32,7 +32,7 @@
 		line-height: 32px
 		color: $gray
 		overflow: auto
-		max-height: 161px
+		height: 161px
 	&__button
 		&-buy
 			margin-right: 26px
