--- a/sass/media/_medium.sass
+++ b/sass/media/_medium.sass
@@ -14,6 +14,8 @@
 			margin-top: 0
 		&-description
 			width: 100%
+			overflow: initial
+			height: auto
 		&-title
 			margin-top: 0
 		&__book
