--- a/sass/media/_small.sass
+++ b/sass/media/_small.sass
@@ -141,6 +141,8 @@
 				&-main
 					width: auto
 			&-title
+				overflow: auto
+				max-height: 60px
 				&-main
 					font-size: 16px
 					line-height: 20px
